--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,12 @@
 @import "tailwindcss";
+
+html,
+body,
+#root {
+  @apply h-full w-full;
+}
+
+.drag {
+  @apply p-2;
+  -webkit-app-region: drag;
+}
